# pinocchio-notes

./: .gitignore  AGENTS.md  Cargo.toml  txtx.yml
client/: checkProgram.ts  client.ts  constants.ts  package.json  pnpm-lock.yaml  tsconfig.json  utils.ts
client/codecs/: initArgsCodec.ts  notesCodec.ts  updateNotesCodec.ts  utils.ts
client/instructions/: initializeNote.ts  updateNote.ts
client/scripts/: createNotesAccount.ts  createTreasuryAccount.ts
client/types/: initialize.ts  noteData.ts  update.ts
runbooks/: README.md
runbooks/deployment/: main.tx
src/: lib.rs  state.rs  utils.rs
src/helpers/: treasury.rs
src/instructions/: initialize.rs  mod.rs  update.rs
