cargo-features = ["edition2024"]

[package]
name = "pinocchio-notes"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
pinocchio = "0.9.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
